--- a/Resources/views/Collector/command.html.twig
+++ b/Resources/views/Collector/command.html.twig
@@ -8,17 +8,17 @@
     {% set text %}
 		<div class="sf-toolbar-info-piece">
             <b>Cache clear</b>
-            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/cache:clear">Push</a></span>
+            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/profilercommand.front.cacheclear">Push</a></span>
         </div>    
 
 		<div class="sf-toolbar-info-piece">
             <b>Assets install</b>
-            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/assetic:dump" >Push</a></span>
+            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/profilercommand.front.assetsinstall" >Push</a></span>
         </div>         
     
 		<div class="sf-toolbar-info-piece">
             <b>Schema update</b>
-            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/doctrine:schema:update --force">Push</a></span>
+            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/profilercommand.front.schemaupdate">Push</a></span>
         </div>        
 
     {% endset %}
@@ -47,15 +47,15 @@
 	    <tbody >
 			<tr>
 				<th>cache:clear</th>
-				<td><a href="/app_dev.php/proccess/cache:clear"> Push</a></td>
+				<td><a href="/app_dev.php/proccess/profilercommand.front.cacheclear"> Push</a></td>
 			</tr>
 			<tr>
 				<th>assets:install</th>
-				<td><a href="/app_dev.php/proccess/assets:install"> Push</a></td>
+				<td><a href="/app_dev.php/proccess/profilercommand.front.assetsinstall"> Push</a></td>
 			</tr>
 			<tr>
 				<th>doctrine:schema:update</th>
-				<td><a href="/app_dev.php/proccess/doctrine:schema:update --force">Push</a></td>
+				<td><a href="/app_dev.php/proccess/profilercommand.front.schemaupdate">Push</a></td>
 			</tr>
 	    </tbody>
 	</table>
