--- a/Resources/views/Collector/command.html.twig
+++ b/Resources/views/Collector/command.html.twig
@@ -6,20 +6,17 @@
         <span>Command</span>
     {% endset %}
     {% set text %}
-		<div class="sf-toolbar-info-piece">
-            <b>Cache clear</b>
-            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/profilercommand.front.cacheclear">Push</a></span>
-        </div>    
+    	{% for key, sections in collector.getProfile %}
+	    	{% if key == 'front' %}
+	    		{% for name,elements in sections %}
+					<div class="sf-toolbar-info-piece">
+			            <b>{{elements.name}}</b>
+			            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/profilercommand.{{key}}.{{name}}">Push</a></span>
+			        </div>  
+	    		{% endfor %}
+	    	{% endif %}
+    	{% endfor %}
 
-		<div class="sf-toolbar-info-piece">
-            <b>Assets install</b>
-            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/profilercommand.front.assetsinstall" >Push</a></span>
-        </div>         
-    
-		<div class="sf-toolbar-info-piece">
-            <b>Schema update</b>
-            <span class="sf-toolbar-status sf-toolbar-status-green"><a style="text-decoration: none; color: #fff; font-weight:bold;" href="/app_dev.php/proccess/profilercommand.front.schemaupdate">Push</a></span>
-        </div>        
 
     {% endset %}
     {% include '@WebProfiler/Profiler/toolbar_item.html.twig' with { 'link': profiler_url } %}
